# Fuzzbin

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Fuzzbin.architecture-csharp.md  Fuzzbin.implementation-guide.md  LICENSE  README.md  config.example.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  genre_mapping.csv  pyproject.toml  renovate.json  verify.py  vulture_whitelist.py
.github/: copilot-instructions.md
.github/workflows/: backend.yml  docker.yml  frontend.yml
Fuzzbin.Core/Entities/: BackgroundJob.cs  BackgroundJobResult.cs  CacheStatSnapshot.cs  DownloadQueueItem.cs  ImvdbArtist.cs  ImvdbVideo.cs  ImvdbVideoArtist.cs  ImvdbVideoCandidate.cs  ImvdbVideoSource.cs  LibraryImportItem.cs  MaintenanceExecution.cs  MbArtist.cs  MbRecording.cs  MbRecordingArtist.cs  MbRecordingCandidate.cs  MbRecordingRelease.cs  MbRelease.cs  MbReleaseGroup.cs  MbReleaseToGroup.cs  MbTag.cs  MvLink.cs  Query.cs  QueryResolution.cs  QuerySourceCache.cs  RecycleBin.cs  Video.cs  YtVideo.cs  YtVideoCandidate.cs
Fuzzbin.Core/Interfaces/: IBackgroundJobService.cs  IConfigurationPathService.cs  IFileOrganizationService.cs  IMaintenanceTask.cs  IMetadataCacheService.cs  IMetadataService.cs  IUnitOfWork.cs
Fuzzbin.Core/Models/: PatternExample.cs  PatternValidationResult.cs
Fuzzbin.Data/Context/: ApplicationDbContext.cs  DesignTimeDbContextFactory.cs
Fuzzbin.Data/Migrations/: 20251013025706_AddBackgroundJobTable.Designer.cs  20251013025706_AddBackgroundJobTable.cs  20251102044736_AddMetadataCacheSchema.Designer.cs  20251102044736_AddMetadataCacheSchema.cs  20251102142555_AddExternalCacheConfiguration.Designer.cs  20251102142555_AddExternalCacheConfiguration.cs  20251102190322_UpdateMetadataCacheEntities.Designer.cs  20251102190322_UpdateMetadataCacheEntities.cs  20251102205758_AddRecycleBinAndResumeSupport.Designer.cs  20251102205758_AddRecycleBinAndResumeSupport.cs  20251103043616_AddNfoAndCacheFieldsToLibraryImportItem.Designer.cs  20251103043616_AddNfoAndCacheFieldsToLibraryImportItem.cs  20251103211726_AddMaintenanceSystem.Designer.cs  20251103211726_AddMaintenanceSystem.cs  20251104032940_AddRecycleBinTable.Designer.cs  20251104032940_AddRecycleBinTable.cs
Fuzzbin.Data/Repositories/: UnitOfWork.cs
Fuzzbin.Services/: BackgroundJobProcessorService.cs  BackgroundJobService.cs  BackupService.cs  BulkOrganizeService.cs  ConfigurationPathService.cs  DownloadBackgroundService.cs  DownloadQueueService.cs  DownloadSettingsProvider.cs  ExternalCacheSettingsProvider.cs  ExternalSearchService.cs  FileOrganizationPatternVariables.cs  FileOrganizationService.cs  GenreMappingDefaultsProvider.cs  GenreService.cs  LibraryImportService.cs  LibraryPathManager.cs  MaintenanceSchedulerService.cs  MetadataCacheService.cs  MetadataExportService.cs  MetadataService.cs  MetadataSettingsProvider.cs  NfoExportService.cs  RecycleBinService.cs  TagService.cs  ThumbnailBackgroundService.cs  ThumbnailService.cs  UrlNormalizationService.cs  VideoService.cs  YtDlpService.cs
Fuzzbin.Services/BackgroundJobs/: BaseJobExecutor.cs  FileOrganizationJobExecutor.cs  MetadataRefreshJobExecutor.cs  SourceVerificationJobExecutor.cs
Fuzzbin.Services/Http/: MusicBrainzHttpMessageHandler.cs  MusicBrainzRateLimiter.cs  RetryPolicyFactory.cs
Fuzzbin.Services/Interfaces/: IBackupService.cs  IDownloadQueueService.cs  IDownloadQueueUpdateNotifier.cs  IExternalCacheSettingsProvider.cs  IGenreMappingDefaultsProvider.cs  IGenreService.cs  IJobProgressNotifier.cs  IMetadataSettingsProvider.cs  IRecycleBinService.cs  ITagService.cs  IVideoService.cs
Fuzzbin.Services/Maintenance/: AutoBackupMaintenanceTask.cs  CachePurgeMaintenanceTask.cs  CacheStatsMaintenanceTask.cs  LibraryScanMaintenanceTask.cs  RecycleBinPurgeMaintenanceTask.cs  ThumbnailCleanupMaintenanceTask.cs
Fuzzbin.Services/Metadata/: CandidateScorer.cs  QueryNormalizer.cs
Fuzzbin.Services/Models/: ExternalCacheOptions.cs  GenreMappingEntry.cs  LibraryImportModels.cs  RetryStrategy.cs  (+3 more)
Fuzzbin.Tests/: Fuzzbin.Tests.csproj
Fuzzbin.Web/: Fuzzbin.Web.csproj  Program.cs
docs/: add-endpoint-plan.md  advanced-config.md  api-ui-spec.md  configuration-directory-implementation.md  download-queue-reliability-implementation.md  fuzzbin-design-system.md  fuzzbin-frontend-plan.md  manual-qa-checklist.md  nfo-schema-reference.md  openapi-spec.md  openapi.json  qa-followup-plan.md  search-improvements-implementation.md  video-import-refactoring-plan.md  video-import-refactoring-summary.md  websocket-spec.md
examples/: api_client_example.py  artist.nfo  cache_example.py  collections_tags_example.py  database_example.py  discogs_artist_releases_response.json  discogs_master_response.json  discogs_parser_example.py  discogs_release_response.json  discogs_search_response.json  discogs_usage_example.py  ffprobe_example.py  ffprobe_sample_output.json  fuzzbin-component-examples.tsx  imvdb_entity_response.json  imvdb_entity_videos_response.json  imvdb_search_entities_response.json  imvdb_search_videos_response.json  imvdb_usage_example.py  imvdb_video_response.json  musicbrainz_aic_down_live.json  musicbrainz_aic_down_studio.json  musicbrainz_artist_search_response.json  musicbrainz_isrc_response.json  musicbrainz_isrc_search_response.json  musicbrainz_recording_response.json  musicbrainz_release_response.json  musicbrainz_rgid_request.md  musicbrainz_rgid_response.json  musicbrainz_search_request.md  musicbrainz_search_response.json  musicbrainz_track_search_response.json  musicvideo.nfo  nfo_importer_example.py  nfo_parser_example.py  organizer_example.py  spotify_importer_example.py  spotify_oauth_example.py  usage_example.py  ytdlp_download_example.py  (+5 more)
frontend/: .env.development  .gitignore  .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
fuzzbin/: __init__.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
tests/: conftest.py
utils/: generate_openapi_docs.py  generate_openapi_docs.sh  test_musicbrainz_enrichment.py
(+566 files in other folders)
