[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuzzbin*"]

[tool.setuptools.package-data]
fuzzbin = ["py.typed", "core/db/migrations/*.sql"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project]
name = "fuzzbin"
dynamic = ["version"]
description = "Music video metadata manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.18.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.1.2",
    "structlog>=25.5.0",
    "hishel[async]>=1.1.7",
    "aiosqlite>=0.22.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "xxhash>=3.5.0",
    "cachetools>=5.0.0",
    "rapidfuzz>=3.10.0",
]

[project.scripts]
fuzzbin-api = "fuzzbin.web.main:run"
fuzzbin-user = "fuzzbin.cli.user:main"

[project.optional-dependencies]
prod = [
    # Production dependencies are already in [project.dependencies]
    # This group exists to exclude dev tools when installing in Docker
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12",
    "types-aiofiles>=24.1.0",
    "types-python-jose>=3.3.4",
    "types-cachetools>=5.5.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=fuzzbin",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "live: Live tests that require real API credentials and make actual HTTP requests",
    "database: Tests that require database initialization and state tracking",
]
filterwarnings = [
    "ignore::RuntimeWarning:httpx._models",
]

[tool.coverage.run]
source = ["fuzzbin"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["dict-item"]  # Suppress Pydantic model_dump() false positives
